Fix scrollbar/gap on mobile Safari

--- a/app/assets/stylesheets/odi-bootstrap.css
+++ b/app/assets/stylesheets/odi-bootstrap.css
@@ -9100,7 +9100,7 @@ section.improvement.improvement-basic a {
   }
 
   .nav-collapse.collapse.in {
-    overflow: visible;
+    overflow: hidden;
   }
 
   .nav-collapse .navbar .nav {
